--- a/track.html
+++ b/track.html
@@ -38,7 +38,7 @@
         <div class="status-card">
           <div class="status-title">集装箱信息</div>
           <img src="./imag01.jpg" alt="集装箱" class="status-photo" />
-          <div class="status-row"><span>集装箱号</span><strong>37896</strong></div>
+          <div class="status-row"><span>集装箱号</span><strong>CSNU8877022</strong></div>
         </div>
         <div class="status-card">
           <div class="status-title">运输计划</div>
@@ -58,5 +58,6 @@
   <script src="./track.js"></script>
 </body>
 </html>
+
 
 
